--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_DB_URL="mongodb+srv://abhi865625:Abhi865625Shek@cluster0.qoui1lu.mongodb.net/"
+MONGO_DB_URL="mongodb+srv://abhi865625:573heidbdoShek@cluster0.qoui1lu.mongodb.net/"
